# pcm

./: .bdsignore.all  .cirrus.yml  .codedocs  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  CUSTOM-COMPILE-OPTIONS.md  DOCKER_README.md  Dev  Dockerfile  Dockerfile.debug  Doxyfile  ENVVAR_README.md  FAQ.md  FREEBSD_HOWTO.txt  IMPLEMENTATION_SUMMARY.md  KSysGuard HOWTO.docx  LICENSE  LINUX_HOWTO.txt  MAC_HOWTO.txt  Makefile  Makefile.lb  Mccoy Louis Stevens  PCM-EXPORTER.md  PCM-SENSOR-SERVER-README.md  PCM_RAW_README.md  README.md  Release  SSH.pem  TODO  WINDOWS_HOWTO.md  WINDOWS_HOWTO.rtf  _service  appveyor.yml  (+79 more)
.bandit/: bandit.config
.github/: dependabot.yml
CommonMSRDriver/: whitelist.c  whitelist.h
Intelpcm.dll/: Intelpcm.cpp  Intelpcm.dll.vcxproj  Intelpcm.h  ReadMe.txt  dllmain.cpp  targetver.h
MacMSRDriver/: DriverInterface.c  MSRAccessor.cpp  MSRAccessorPublic.h  MSRKernel.h  Makefile  PCIDriverInterface.h  kextload.sh  kextunload.sh
PCM-Core_Win/: pcm-core-win.vcxproj
PCM-IIO_Win/: pcm-iio-win.cpp  pcm-iio-win.vcxproj
PCM-LSPCI_Win/: pcm-lspci-win.vcxproj
PCM-Latency_Win/: pcm-latency-win.cpp  pcm-latency-win.vcxproj
PCM-Lib_Win/: pcm-lib.cpp  pcm-lib.h  pcm-lib.vcxproj
PCM-MMIO_Win/: pcm-mmio-win.cpp  pcm-mmio-win.vcxproj
PCM-MSR_Win/: pcm-msr-win.cpp  pcm-msr-win.vcxproj
PCM-Memory_Win/: pcm-memory-win.vcxproj
PCM-NUMA_Win/: pcm-numa-win.vcxproj
PCM-PCICFG_Win/: pcm-pcicfg-win.vcxproj
PCM-PCIE_Win/: pcm-pcie-win.cpp  pcm-pcie-win.vcxproj
PCM-Power_Win/: pcm-power-win.vcxproj
PCM-Raw_Win/: pcm-raw-win.cpp  pcm-raw-win.vcxproj
PCM-Service_Win/: AssemblyInfo.cpp  PCM-Service.exe.config  PCMInstaller.cpp  PCMInstaller.h  PCMInstaller.resx  PCMService.cpp  PCMService.h  PCMService.vcxproj  ReadMe.txt
PCM-TSX_Win/: pcm-tsx-win.vcxproj
PCM_Win/: pcm.cpp  pcm.vcxproj  restrictDriverAccess.cpp  stdafx.cpp  stdafx.h  windriver.h
PMURegisterDeclarations/: GenuineIntel-6-55-4.json  GenuineIntel-6-6A-6.json  GenuineIntel-6-8E-C.core.json  GenuineIntel-6-8E-C.json
WinMSRDriver/: MSR.inf  MSR.vcxproj  msrmain.c  msrstruct.h  mymake.bat
_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  pcm-sensor-server.service
c/: PCM_IIO_README.md
daemon/: .project
debian/: changelog  control  copyright  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
doc/: CXL_README.md  DOCKER_README.md  ENVVAR_README.md  FAQ.md  FREEBSD_HOWTO.txt  KSysGuard HOWTO.docx  LINUX_HOWTO.txt  (+12 more)
examples/: CMakeLists.txt  c_example.c  numa_node_example.cpp  numa_to_socket_example.cpp
src/: CMakeLists.txt  bw.cpp  bw.h  cpuasynchcounter.h  cpucounters.cpp  cpucounters.h  dashboard.cpp  dashboard.h  dashboardtest.cpp  debug.cpp  debug.h  favicon.ico.h  lspci.cpp  lspci.h  memoptest.cpp  mmio.cpp  mmio.h  msr.cpp  msr.h  msrtest.cpp  mutex.h  opCode-106-iommu.txt  opCode-106-p2p.txt  opCode-106.txt  opCode-143-accel.txt  opCode-143-iommu.txt  opCode-143-p2p.txt  opCode-143.txt  opCode-6-106.txt  opCode-6-108.txt  opCode-6-134.txt  opCode-6-143-accel.txt  opCode-6-143.txt  opCode-6-173.txt  opCode-6-175.txt  opCode-6-207.txt  opCode-6-85.txt  pci.cpp  pci.h  pcm-accel-common.cpp  (+51 more)
src/MacMSRDriver/: CMakeLists.txt  DriverInterface.c  DriverInterface.h  MSRAccessor.cpp  MSRAccessor.h  MSRAccessorPublic.h  MSRKernel.h  PCIDriverInterface.cpp  PCIDriverInterface.h  kextload.sh
src/MacMSRDriver/PcmMsr/: CMakeLists.txt  PcmMsr-Info.plist  PcmMsr.cpp  PcmMsr.h  PcmMsrClient.cpp  PcmMsrClient.h  PcmMsrDriver_info.c  UserKernelShared.h
src/MacMSRDriver/PcmMsr.xcodeproj/: project.pbxproj
src/MacMSRDriver/PcmMsr.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/MacMSRDriver/PcmMsr.xcodeproj/project.xcworkspace/xcuserdata/pjkerly.xcuserdatad/: UserInterfaceState.xcuserstate
src/MacMSRDriver/PcmMsr.xcodeproj/xcuserdata/aiott.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
src/MacMSRDriver/PcmMsr.xcodeproj/xcuserdata/aiott.xcuserdatad/xcschemes/: PcmMsr.xcscheme  PcmMsrLibrary.xcscheme  xcschememanagement.plist
src/MacMSRDriver/PcmMsr.xcodeproj/xcuserdata/pjkerly.xcuserdatad/xcschemes/: PcmMsrDriver.xcscheme  PcmMsrLibrary.xcscheme
src/PMURegisterDeclarations/: GenuineIntel-6-4F-1.json  GenuineIntel-6-55-4.json  GenuineIntel-6-55-7.json  GenuineIntel-6-6A-6.json  GenuineIntel-6-86-5.json  GenuineIntel-6-AE-0.json  GenuineIntel-6-B6-0.json  GenuineIntel-6-CF-1.json
src/WinMSRDriver/: MSR.inf  MSR.vcxproj  msr.h  msrmain.c  msrstruct.h  sources
src/client/: .cproject  .project  CMakeLists.txt  client.cpp  client.h  main.cpp
src/daemon/: .cproject  .gitignore  CMakeLists.txt  common.h  common_V1_0_5.h  common_V2_0_0.h  daemon.cpp  daemon.h  main.cpp  pcm.h
src/daemon/test/: Makefile
src/exceptions/: unsupported_processor_exception.hpp
src/freegetopt/: ChangeLog  getopt.cpp
src/windows/: AssemblyInfo.cpp  PCM-Service.exe.config  PCMInstaller.cpp  PCMInstaller.h  PCMService.cpp  PCMService.h  ReadMe_PCMService.txt  dllmain.cpp  pcm-core-win.cpp  pcm-lib.cpp  pcm-lib.h  pcm-lspci-win.cpp  pcm-memory-win.cpp  pcm-numa-win.cpp  pcm-pcicfg-win.cpp  pcm-power-win.cpp  pcm-tsx-win.cpp  pcm.cpp  pcm_lib_ReadMe.txt  pcm_power_ReadMe.txt  restrictDriverAccess.cpp  stdafx.cpp  stdafx.h  windriver.h
src/winpmem/: winpmem.cpp  winpmem.h
src/winring0/: OlsApiInit.h  OlsDef.h
tests/: CMakeLists.txt  cache_verification_test.cpp  daemon_alignment_test.cpp  fuzz.sh  numa_test.cpp  numa_to_socket_test.cpp  pcm-fuzz.cpp  pcm-memory-fuzz.cpp  pcm-sensor-server-fuzz.cpp  test.sh  urltest-fuzz.cpp  urltest.cpp
tests/urltest-fuzz.corpus/: url_0.txt  url_1.txt  url_10.txt  url_11.txt  url_12.txt  url_13.txt  url_14.txt  url_15.txt  url_16.txt  url_17.txt  url_18.txt  url_19.txt  url_2.txt  url_20.txt  url_3.txt  url_4.txt  url_5.txt  url_6.txt  url_8.txt  url_9.txt
tests/utests/: CMakeLists.txt  pcm-iio-utest.cpp  pcm-sensor-server-overflow-utest.cpp  read-number-utest.cpp
utests/: CMakeLists.txt  lspci-utest.cpp
(+182 files in other folders)
